<?xml version="1.0"?>
<package format="3">
  <name>maxon_launch</name>
  <version>0.0.1</version>
  <description>
    Launch package
  </description>
  <license>TODO: License declaration</license>
  <author email="orangepi@todo.todo">orangepi</author>
  <maintainer email="orangepi@todo.todo">orangepi</maintainer>
 

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>